# Online-Judgement-Platform-Codes

./: .gitignore
AtCoder/AtCoder Regular Contest 116/: A_Odd_vs_Even.cpp  CMakeLists.txt
BJTU OJ/2021.12 第十届新生程序设计竞赛及蓝桥杯选拔赛网络预选赛/: A_三体·Round_-_二向箔.cpp  B_三体·Round_-_阶梯计划.cpp  CMakeLists.txt
BJTU OJ/2022.12 第十一届新生程序设计竞赛及蓝桥杯选拔赛网络预选赛/: B.cpp  C.cpp  CMakeLists.txt  C_.cpp  D.cpp  E.cpp
BJTU OJ/2022.9 北京交通大学 第十六届大学生程序设计竞赛/: A_暗影岛的歌声.cpp  CMakeLists.txt  F_排队.cpp  G_铁憨憨骑士团的课后作业.cpp  K_铁憨憨骑士团的缎带分配.cpp
BJTU OJ/2023.2 第十一届新生程序设计竞赛及蓝桥杯选拔赛/: CMakeLists.txt  C_艾莉卡的请求.cpp  E_情书.cpp  G_挑战.cpp  H_cats_的随机化做题策略.cpp  H_cats_的随机化做题策略.py  I_rankYu的高能装置.cpp  K_「自动手记人偶」.cpp
BJTU OJ/北京交通大学 第九届新生程序设计竞赛/: CMakeLists.txt  C_量子波动阅读法.cpp  E_铁憨憨骑士团的购买装备.cpp
Codeforces/2019-2020 ICPC Southwestern European Regional Programming Contest (SWERC 2019-20)/: B_Biodiversity.cpp  CMakeLists.txt  C_Ants.cpp  F_Icebergs.cpp  I_Rats.cpp  K_Birdwatching.cpp
Codeforces/2021 ICPC Southeastern Europe Regional Contest/: A_King_of_String_Comparison.cpp  CMakeLists.txt  J_ABC_Legacy.cpp  N_A-series.cpp
Codeforces/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/: A_MEXanized_Array.cpp  B_Friendly_Arrays.cpp  C_Colorful_Table.cpp
Codeforces/Codecraft-17 and Codeforces Round #391 (Div. 1 + Div. 2, combined)/: A_Gotta_Catch_Em'_All!.cpp  B_Bash's_Big_Day.cpp  CMakeLists.txt  C_Felicity_is_Coming!.cpp
Codeforces/Codeforces Round 895 (Div. 3)/: A_Two_Vessels.cpp  B_The_Corridor_or_There_and_Back_Again.cpp  CMakeLists.txt  C_Non-coprime_Split.cpp  D_Plus_Minus_Permutation.cpp  E_Data_Structures_Fan.cpp
(+240 files in other folders)
