cmake_minimum_required(VERSION 3.26)
project(2019_2020_ICPC_Southwestern_European_Regional_Programming_Contest__SWERC_2019_20_)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(B B_Biodiversity.cpp)
add_executable(C C_Ants.cpp)
add_executable(F F_Icebergs.cpp)
add_executable(I I_Rats.cpp)
add_executable(K K_Birdwatching.cpp)
