cmake_minimum_required(VERSION 3.26)
project(Codeforces_Round_895__Div__3_)

set(CMAKE_CXX_STANDARD 17)

add_executable(A A_Two_Vessels.cpp)
add_executable(B B_The_Corridor_or_There_and_Back_Again.cpp)
add_executable(C C_Non-coprime_Split.cpp)
add_executable(D D_Plus_Minus_Permutation.cpp)
add_executable(E E_Data_Structures_Fan.cpp)